--- a/interest-server/src/main/resources/application.yml
+++ b/interest-server/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
     context-path: /interest
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/interest?useUnicode=true&characterEncoding=UTF-8&useSSL=false&jdbcCompliantTruncation=false&zeroDateTimeBehavior=convertToNull
+    url: jdbc:mysql://127.0.0.1:3306/interest_test?useUnicode=true&createDatabaseIfNotExist=true&characterEncoding=UTF-8&useSSL=false&jdbcCompliantTruncation=false&zeroDateTimeBehavior=convertToNull
     username:
     password:
     hikari:
@@ -32,17 +32,20 @@ spring:
       - classpath:/static/
       - classpath:/public/
       - file:${interest.paths-properties.image}
+  liquibase:
+    change-log: classpath:database/master.xml
+    enabled: true
+    drop-first: false
 mybatis:
   mapper-locations: classpath:mybatis/mapper/*.xml
   type-aliases-package: com.interest.model
-
 logging:
 # 你需要存储日志的目录
   file: D:/interest/file/log/interest.log
-#  level:
+  level:
 #    org.springframework.web: DEBUG
 #    org.springframework.security: DEBUG
-#    com.interest: DEBUG
+    com.interest: DEBUG
 
 #自定义配置
 interest:
