--- a/interest-server/src/main/resources/application.yml
+++ b/interest-server/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8070
+  port: 8080
   servlet:
     context-path: /interest
 spring:
   datasource:
-    url: jdbc:mysql://123.206.215.203:3306/interest_test?useUnicode=true&createDatabaseIfNotExist=true&characterEncoding=UTF-8&useSSL=false&jdbcCompliantTruncation=false&zeroDateTimeBehavior=convertToNull
-    username: interest_test
-    password: interest_test@123
+    url: jdbc:mysql://127.0.0.1:3306/interest_test?useUnicode=true&createDatabaseIfNotExist=true&characterEncoding=UTF-8&useSSL=false&jdbcCompliantTruncation=false&zeroDateTimeBehavior=convertToNull
+    username:
+    password:
     hikari:
       minimum-idle: 5
       maximum-pool-size: 15
@@ -52,7 +52,7 @@ interest:
   paths-properties:
     image: D:/interest/file/image
 #    image: 你需要存储图片的目录，如上
-    domain-name: http://127.0.0.1:8070
+    domain-name: http://127.0.0.1:8080
 #   domain-name: https://www.lovemtt.com
 #   domain-name: 你的域名或者（ip+端口），如上
   github:
@@ -63,5 +63,4 @@ interest:
     appkey: 你在qq中注册的appkey
   other:
 #    上传文件的临时目录
-    temporary-path: /Users/wanghuan/Documents/GitHub/interest/interest-server/D:/interest/file/tmp
-#    temporary-path: /interest/file/tmp
+    temporary-path: D:/interest/file/tmp
