--- a/interest-server/src/main/resources/application.yml
+++ b/interest-server/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
     context-path: /interest
 spring:
   datasource:
-    url: jdbc:mysql://123.206.215.203:3306/interest_test?useUnicode=true&createDatabaseIfNotExist=true&characterEncoding=UTF-8&useSSL=false&jdbcCompliantTruncation=false&zeroDateTimeBehavior=convertToNull
-    username: interest_test
-    password: interest_test@123
+    url: jdbc:mysql://127.0.0.1:3306/interest_test?useUnicode=true&createDatabaseIfNotExist=true&characterEncoding=UTF-8&useSSL=false&jdbcCompliantTruncation=false&zeroDateTimeBehavior=convertToNull
+    username:
+    password:
     hikari:
       minimum-idle: 5
       maximum-pool-size: 15
@@ -63,5 +63,4 @@ interest:
     appkey: 你在qq中注册的appkey
   other:
 #    上传文件的临时目录
-    temporary-path: /Users/wanghuan/Documents/GitHub/interest/interest-server/D:/interest/file/tmp
-#    temporary-path: /interest/file/tmp
+    temporary-path: D:/interest/file/tmp
