--- a/interest-web/package.json
+++ b/interest-web/package.json
@@ -20,7 +20,8 @@
     "vue-quill-editor": "^3.0.4",
     "quill-image-drop-module": "^1.0.3",
     "quill-image-resize-module": "^3.0.0",
-    "vue-image-crop-upload": "2.5.0"
+    "vue-image-crop-upload": "2.5.0",
+    "vant": "^2.0.5"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.4.4",
